fix up error showing behind tasks

--- a/ui/app/src/styles/main.scss
+++ b/ui/app/src/styles/main.scss
@@ -2379,6 +2379,7 @@ header .branding img {
     border-radius: 5px;
     padding: 5px;
     word-break: break-all;
+    position: relative;
   }
 
   .errMsg {
